--- a/lowwer_computer/LowwerController/LowwerController.ioc
+++ b/lowwer_computer/LowwerController/LowwerController.ioc
@@ -11,14 +11,17 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -34,9 +37,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PC13-ANTI_TAMP.Locked=true
@@ -96,6 +104,8 @@ RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
